# venturemind-ai

venturemind_ai/: .gitignore  README.md  pyproject.toml  requirement.txt
venturemind_ai/knowledge/business_frameworks/: business_model_canvas.txt  go_to_market.txt  swot_analysis.txt
venturemind_ai/knowledge/market_research/: customer_acquisition.txt  saas_market.txt  startup_growth.txt
venturemind_ai/knowledge/startup_guides/: lean_startup.txt  mvp_strategy.txt  startup_validation.txt
venturemind_ai/src/venturemind_ai/: app.py  crew.py  main.py
venturemind_ai/src/venturemind_ai/agents/: competitor_agent.py  gtm_agent.py  investor_agent.py  market_agent.py  web_research_agent.py
venturemind_ai/src/venturemind_ai/graph/: nodes.py  state.py  workflow.py
venturemind_ai/src/venturemind_ai/rag/: chunking.py  embeddings.py  ingest.py  retriever.py
venturemind_ai/src/venturemind_ai/tasks/: competitor_task.py  gtm_task.py  market_task.py
venturemind_ai/src/venturemind_ai/tools/: llm_tool.py  rag_tool.py  report_generator.py
venturemind_ai/src/venturemind_ai/utils/: constants.py  helpers.py  prompts.py
