[project]
name = "venturemind_ai"
version = "0.1.0"
description = "venturemind-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
venturemind_ai = "venturemind_ai.main:run"
run_crew = "venturemind_ai.main:run"
train = "venturemind_ai.main:train"
replay = "venturemind_ai.main:replay"
test = "venturemind_ai.main:test"
run_with_trigger = "venturemind_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
